expanded inventory actions, replaced console with scanner